solving some problems

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,9 +41,9 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginBottom="2dp"
-        android:backgroundTint="@color/music_blue"
+        android:backgroundTint="@color/filled_gray"
         android:visibility="gone"
-        app:cardCornerRadius="12dp"
+        app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNav"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/bottomNav">
@@ -66,7 +66,7 @@
                 android:id="@+id/imgTrack"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -76,10 +76,9 @@
                 android:id="@+id/txtMusicName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginEnd="24dp"
                 android:textColor="@color/white"
-                android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/imgTrack"
                 app:layout_constraintEnd_toStartOf="@+id/imgPause"
