--- a/app/src/main/res/navigation/activity_main_nav.xml
+++ b/app/src/main/res/navigation/activity_main_nav.xml
@@ -54,6 +54,9 @@
         <action
             android:id="@+id/action_homeFragment_to_settingsFragment"
             app:destination="@id/settingsFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_userLibraryFragment"
+            app:destination="@id/userLibraryFragment" />
     </fragment>
     <action
         android:id="@+id/toSearch"
