--- a/app/src/main/res/drawable/playlist_layout_view.xml
+++ b/app/src/main/res/drawable/playlist_layout_view.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="30"
-        android:startColor="#FF5722"
+        android:startColor="#817950"
         android:endColor="@color/primary"
         android:type="linear" />
 </shape>
