fixin little issues - date , reformatting names , album background image

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,7 +100,8 @@
                 android:id="@+id/progressBar"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="0dp"
-                android:layout_height="10dp"
+                app:layout_constraintCircleRadius="10dp"
+                android:layout_height="8dp"
                 android:clickable="false"
                 android:focusable="false"
                 android:indeterminate="false"
