--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -222,6 +222,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:checkable="true"
+                android:elevation="10dp"
                 app:backgroundTint="@drawable/chip"
                 android:checked="true"
                 android:clickable="true"
@@ -236,6 +237,7 @@
                 android:layout_width="wrap_content"
                 app:backgroundTint="@drawable/chip"
                 android:layout_height="match_parent"
+                android:elevation="10dp"
                 android:clickable="true"
                 android:text="@string/home_btn_music"
                 android:textColor="@color/white"
