--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginBottom="2dp"
-        android:backgroundTint="@color/filled_gray"
+        android:backgroundTint="#282828"
         android:visibility="gone"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNav"
