--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary"
-    tools:context=".ui.fragments.home.HomeFragment">
+    tools:context=".ui.fragments.home.general.HomeFragment">
     <EditText
         android:id="@+id/edtSearch"
         android:layout_width="0dp"
