--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,7 +5,7 @@
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:fontFamily">@font/avenir_next_regular</item>
-        
+
     </style>
 
     <style name="toolbarMenuTheme">
@@ -27,5 +27,25 @@
         <item name="chipStrokeColor">@color/primary</item>
         <item name="chipStrokeWidth">1dp</item>
         <item name="android:textColor">@color/green</item>
+    </style>
+
+    <style name="AppTabLayout" parent="Widget.Design.TabLayout">
+
+        <item name="tabIndicatorColor">@color/green</item>
+        <item name="tabIndicatorHeight">2dp</item>
+        <item name="tabPaddingStart">2dp</item>
+        <item name="android:width">30dp</item>
+        <item name="android:layout_marginEnd">20dp</item>
+        <item name="tabPaddingEnd">2dp</item>
+        <item name="tabTextAppearance">@style/AppTabTextAppearance</item>
+        <item name="tabSelectedTextColor">@color/black</item>
+        <item name="tabBackground">@drawable/btn_gender</item>
+        <item name="tabIndicator">@drawable/btn_signup</item>
+    </style>
+
+    <style name="AppTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="textAllCaps">false</item>
     </style>
 </resources>
