updated : font family for bold , layout customization ,

--- a/app/src/main/res/layout/fragment_user_library.xml
+++ b/app/src/main/res/layout/fragment_user_library.xml
@@ -46,7 +46,8 @@
         android:layout_marginStart="16dp"
         tools:text="TextView"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="25sp"
+        style="@style/BoldText"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imgProfile"
         app:layout_constraintStart_toEndOf="@+id/imgProfile"
@@ -59,6 +60,7 @@
         android:layout_height="25dp"
         android:background="@drawable/btn_user_library"
         android:text="Edit"
+        style="@style/BoldText"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="12sp"
