--- a/app/src/main/res/layout/bottom_sheet_track.xml
+++ b/app/src/main/res/layout/bottom_sheet_track.xml
@@ -29,6 +29,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:textColor="@color/white"
+            style="@style/BoldText"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
