--- a/app/src/main/res/layout/fragment_album_view.xml
+++ b/app/src/main/res/layout/fragment_album_view.xml
@@ -56,6 +56,7 @@
         tools:text="TextView"
         android:textColor="@color/white"
         android:textSize="25sp"
+        style="@style/BoldText"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
