--- a/app/src/main/res/layout/fragment_artist_view.xml
+++ b/app/src/main/res/layout/fragment_artist_view.xml
@@ -55,6 +55,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         tools:text="TextView"
+        style="@style/BoldText"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"
