--- a/app/src/main/res/layout/fragment_home_general.xml
+++ b/app/src/main/res/layout/fragment_home_general.xml
@@ -22,6 +22,7 @@
                 android:text="@string/home_txt_new"
                 android:textColor="@color/white"
                 android:textSize="20sp"
+                style="@style/BoldText"
                 android:textStyle="bold"
                 android:visibility="gone"
                 app:layout_constraintStart_toStartOf="@+id/leftGuideline"
@@ -47,6 +48,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:visibility="gone"
+                style="@style/BoldText"
                 app:layout_constraintStart_toStartOf="@+id/leftGuideline"
                 app:layout_constraintTop_toBottomOf="@id/topGuideline" />
 
@@ -100,6 +102,7 @@
                 android:layout_marginTop="16dp"
                 android:text="@string/home_txt_try"
                 android:textColor="@color/white"
+                style="@style/BoldText"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:visibility="gone"
@@ -116,6 +119,7 @@
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                style="@style/BoldText"
                 android:visibility="gone"
                 app:layout_constraintStart_toStartOf="@+id/leftGuideline"
                 app:layout_constraintTop_toBottomOf="@+id/recyclerViewNewRelease" />
@@ -138,6 +142,7 @@
                 android:layout_marginTop="16dp"
                 android:text="@string/home_txt_recommended"
                 android:textColor="@color/white"
+                style="@style/BoldText"
                 android:textSize="22sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/leftGuideline"
