--- a/app/src/main/res/layout/fragment_liked_songs.xml
+++ b/app/src/main/res/layout/fragment_liked_songs.xml
@@ -90,6 +90,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/liked_songs_txt_header"
+        style="@style/BoldText"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -110,7 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="0 song"
+        android:text="0 songs"
         android:textColor="@color/txt_gray"
         app:layout_constraintStart_toStartOf="@+id/textView8"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
