--- a/app/src/main/res/layout/fragment_new_playlist.xml
+++ b/app/src/main/res/layout/fragment_new_playlist.xml
@@ -34,8 +34,9 @@
         android:layout_marginBottom="24dp"
         android:text="@string/playlist_txt_header"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="20sp"
         android:textStyle="bold"
+        style="@style/BoldText"
         app:layout_constraintBottom_toTopOf="@+id/edtPlaylistName"
         app:layout_constraintEnd_toEndOf="@+id/edtPlaylistName"
         app:layout_constraintStart_toStartOf="@+id/edtPlaylistName" />
@@ -47,6 +48,7 @@
         android:layout_marginTop="32dp"
         android:background="@drawable/btn_user_library"
         android:text="@string/search_txt_cancel"
+        style="@style/BoldText"
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/btnCreate"
@@ -60,6 +62,7 @@
         android:layout_height="wrap_content"
         android:text="@string/playlist_txt_create"
         android:textAllCaps="false"
+        style="@style/BoldText"
         android:background="@drawable/btn_signup"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
