--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary"
-    tools:context=".ui.fragments.home.general.HomeFragment">
+    >
     <EditText
         android:id="@+id/edtSearch"
         android:layout_width="0dp"
@@ -16,6 +16,7 @@
         android:drawablePadding="4dp"
         android:focusable="false"
         android:textSize="12dp"
+        android:textAllCaps="false"
         android:textStyle="bold"
         android:ems="10"
         android:drawableTint="@color/black"
@@ -53,6 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@android:string/search_go"
+        style="@style/BoldText"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -66,6 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/search_txt_browse_all"
+        style="@style/BoldText"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
