--- a/app/src/main/res/layout/fragment_single_playlist.xml
+++ b/app/src/main/res/layout/fragment_single_playlist.xml
@@ -55,6 +55,7 @@
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"
+        style="@style/BoldText"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
         app:layout_constraintTop_toBottomOf="@+id/imgAlbum"
