--- a/app/src/main/res/layout/fragment_track_view.xml
+++ b/app/src/main/res/layout/fragment_track_view.xml
@@ -53,7 +53,7 @@
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
         app:layout_constraintTop_toBottomOf="@+id/txtTrackName"
-        app:layout_constraintVertical_bias="0.15"
+        app:layout_constraintVertical_bias="0.109"
         tools:src="@tools:sample/avatars" />
 
     <TextView
@@ -65,6 +65,7 @@
         tools:text="TextView"
         android:textColor="@color/white"
         android:textSize="18sp"
+        style="@style/BoldText"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
