--- a/app/src/main/res/layout/item_album_tracks.xml
+++ b/app/src/main/res/layout/item_album_tracks.xml
@@ -9,19 +9,20 @@
 
     <TextView
         android:id="@+id/txtTrackName"
+        style="@style/BoldText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="16dp"
-        tools:text="TextView"
         android:layout_marginStart="8dp"
-        app:layout_goneMarginLeft="0dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="16dp"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/imgMore"
         app:layout_constraintStart_toEndOf="@+id/musicIcon"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_goneMarginLeft="0dp"
+        tools:text="TextView" />
 
     <ImageView
         android:id="@+id/imgAlbum"
