--- a/app/src/main/res/layout/item_library_album.xml
+++ b/app/src/main/res/layout/item_library_album.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:vumeter="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardView"
+
     android:layout_width="match_parent"
-    android:backgroundTint="@color/primary"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="16dp">
+    android:layout_marginBottom="16dp"
+    android:backgroundTint="@color/filled_gray">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,26 +19,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
+            app:layout_constraintVertical_bias="0.7"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/album"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/txtAlbumName"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/icon_more" />
 
         <ImageView
             android:id="@+id/imgAlbum"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/txtAlbumName"
+
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="8dp"
             android:textColor="@color/white"
             android:textSize="16sp"
@@ -56,7 +59,6 @@
             android:textColor="@color/txt_gray"
             app:layout_constraintStart_toStartOf="@+id/txtAlbumName"
             app:layout_constraintTop_toBottomOf="@+id/txtAlbumName" />
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
