--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,6 +8,11 @@
 
     </style>
 
+    <style name="BoldText">
+        <item name="android:fontFamily">@font/avenir_next_bold</item>
+
+    </style>
+
     <style name="toolbarMenuTheme">
         <item name="android:colorBackground">@color/white</item>
         <item name="android:textColor">@color/white</item>
@@ -39,13 +44,14 @@
         <item name="tabPaddingEnd">2dp</item>
         <item name="tabTextAppearance">@style/AppTabTextAppearance</item>
         <item name="tabSelectedTextColor">@color/black</item>
-        <item name="tabBackground">@drawable/btn_gender</item>
+        <item name="tabBackground">@drawable/btn_filled_gray</item>
         <item name="tabIndicator">@drawable/btn_signup</item>
     </style>
 
     <style name="AppTabTextAppearance" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/avenir_next_bold</item>
         <item name="textAllCaps">false</item>
     </style>
 </resources>
