--- a/app/src/main/res/layout/fragment_user_library.xml
+++ b/app/src/main/res/layout/fragment_user_library.xml
@@ -59,7 +59,7 @@
         android:layout_width="60dp"
         android:layout_height="25dp"
         android:background="@drawable/btn_user_library"
-        android:text="Edit"
+        android:text="@string/txt_playlist_edit"
         style="@style/BoldText"
         android:textAllCaps="false"
         android:textColor="@color/white"
