--- a/app/src/main/res/menu/bottom_navigation_bar.xml
+++ b/app/src/main/res/menu/bottom_navigation_bar.xml
@@ -6,20 +6,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/icon_menu_home"
-        android:title="Home"
+        android:title="@string/navigation_home"
         android:visible="true" />
     <item
         android:id="@+id/searchFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/icon_menu_search"
-        android:title="Search" />
+        android:title="@string/navigation_search" />
     <item
         android:id="@+id/libraryFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="false"
         android:icon="@drawable/icon_menu_library"
-        android:title="Your Library"
+        android:title="@string/navigation_library"
         android:visible="true" />
 </menu>
