deezer api albums implementations

--- a/app/src/main/res/layout/fragment_track_view.xml
+++ b/app/src/main/res/layout/fragment_track_view.xml
@@ -49,6 +49,9 @@
         android:id="@+id/imgTrack"
         android:layout_width="0dp"
         android:layout_height="380dp"
+        android:background="@drawable/image_album"
+        android:clipToOutline="true"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
