--- a/app/src/main/res/layout/album_listview.xml
+++ b/app/src/main/res/layout/album_listview.xml
@@ -21,6 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:maxLines="1"
         android:textColor="@color/btn_gray"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@+id/imgArtist"
