--- a/app/src/main/res/layout/fragment_album_view.xml
+++ b/app/src/main/res/layout/fragment_album_view.xml
@@ -43,6 +43,9 @@
         android:layout_width="300dp"
         android:layout_height="250dp"
         android:layout_marginTop="24dp"
+        android:scaleType="fitXY"
+        android:background="@drawable/image_album"
+        android:clipToOutline="true"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
         app:layout_constraintTop_toBottomOf="@+id/imgBack"
