bug fixes , and new functionality over media playing

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,9 +39,10 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/musicPlayer"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="56dp"
+        android:layout_marginHorizontal="10dp"
         android:layout_marginBottom="2dp"
-        android:backgroundTint="#393939"
+        android:backgroundTint="#550A1C"
         android:visibility="gone"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNav"
@@ -64,8 +65,10 @@
 
             <ImageView
                 android:id="@+id/imgTrack"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="38dp"
+                android:layout_height="38dp"
+                android:background="@drawable/image_album"
+                android:clipToOutline="true"
                 android:layout_marginStart="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -77,6 +80,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                style="@style/BoldText"
                 android:layout_marginEnd="24dp"
                 android:textColor="@color/white"
                 android:textStyle="bold"
@@ -101,12 +105,13 @@
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="0dp"
                 app:layout_constraintCircleRadius="10dp"
-                android:layout_height="6dp"
+                android:layout_height="4dp"
                 android:clickable="false"
                 android:focusable="false"
                 android:indeterminate="false"
                 android:max="100"
                 android:progress="0"
+                app:circularflow_radiusInDP="10dp"
                 android:progressTint="@color/white"
                 android:thumb="@null"
                 app:layout_constraintBottom_toBottomOf="parent"
