--- a/app/src/main/res/layout/fragment_sign_up1.xml
+++ b/app/src/main/res/layout/fragment_sign_up1.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary"
-    tools:context=".ui.fragments.sign_up.SignUp1">
+    tools:context=".ui.fragments.sign_up.SignUpFragment1">
 
 
     <androidx.appcompat.widget.Toolbar
